--- a/configs/model/mlp.yaml
+++ b/configs/model/mlp.yaml
@@ -1,5 +1,11 @@
 name: mlp
 type: mlp
 
-hidden_layers: 2
-hidden_size: 200
+batch_size: 512
+dropout: 0.5
+epochs: 500
+
+hidden_layers: 1
+hidden_size: 100
+
+learning_rate: 3.0e-3
